## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for the top directory
##
## $Id: Makefile.am 2087 2011-05-09 15:28:52Z n-ando $
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = build src utils examples etc docs win32

DIST_SUBDIRS = packages $(SUBDIRS)

EXTRA_DIST =        \
	README      \
	README.jp   \
	COPYRIGHT   \
	COPYING.LIB \
	INSTALL     \
	INSTALL.jp

clean-local:
	rm -f *~ *.core

