## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for etc distribution files
##
## $Id: Makefile.am 775 2008-07-28 16:14:45Z n-ando $
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

dist_sysconf_DATA = rtc.conf.sample
