## -*- Makefile -*-
##------------------------------------------------------------
## Makefile.am for examples
##
## $Id: Makefile.am 1663 2010-01-15 10:46:39Z geoff $
##------------------------------------------------------------


AUTOMAKE_OPTIONS = 1.4

SUBDIRS = Composite ConfigSample SimpleIO SeqIO SimpleService ExtTrigger Templates @UNITTEST@

EXTRA_DIST =               \
	rtc.vcproj.yaml    \
	rtcdll.vcproj.yaml

DIST_SUBDIRS = Composite ConfigSample SimpleIO SeqIO SimpleService ExtTrigger AutoTest Templates tests
