## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for OpenRTM-aist utilities
##
## $Id: Makefile.am 2164 2011-06-04 08:26:56Z n-ando $
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = rtm-config cmake rtc-template rtm-skelwrapper rtm-naming rtcd rtcprof prtcd

