## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for win32/OpenRTM-aist/utils
##
## $Id: Makefile.am 1766 2010-01-23 17:19:09Z n-ando $
##---------------------------------------------------------------------------
SUBDIRS = rtc-template rtcd rtcprof

